add footer en html y la dataset

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <footer>
+      <a href="https://github.com/vaneval27">By Vane </a>
+      <a href="https://github.com/1Tai7/DEV012-dataverse">& ilce</a>
+    </footer>
     <script src="main.js" type="module"></script>
   </body>
 </html>
