--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <h1>STAR WARS</h1>
-    </header>
-    <main>
-      <h2></h2>
-    </main>
-    <section>
-      <ul >
-      
-      </ul>
-    </section>
-    <footer>
-      <a href="https://github.com/vaneval27">By Vane </a>
-      <a href="https://github.com/1Tai7/DEV012-dataverse">& ilce</a>
-    </footer>
-    <script src="main.js" type="module"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Data Lovers</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <h1>STAR WARS</h1>
+  </header>
+  <main>
+    <h2></h2>
+    <div>
+      <label for="select-filter">Filtrar por: </label>
+      <select name="type" data-testid="select-filter">
+        <option value="">-- selecciona un filtro --</option>
+        <option value="Human">human</option>
+        <option value="Unknown">desconocido</option>
+        <option value="Zabrak">zabrak</option>
+      </select>
+    </div>
+    <button>Aplicar</button>
+  </main>
+  <section id="root">
+    <ul>
+
+    </ul>
+  </section>
+  <footer>
+    <a href="https://github.com/vaneval27">By Vane </a>
+    <a href="https://github.com/1Tai7/DEV012-dataverse">& ilce</a>
+  </footer>
+  <script src="main.js" type="module"></script>
+</body>
+
 </html>
