se corrigio error de oas-web-api y se paso la prueba, mobila listo y corrigiendo errores de oas-promp

--- a/src/index.html
+++ b/src/index.html
@@ -73,11 +73,11 @@
   </section>
 
   <section id="root" class="cardsBox">
-    <ul></ul>
+  
   </section>
   <footer><i class="fa-brands fa-github" style="color: #d7d700"></i>
-    <a href="https://github.com/vaneval27">By Vane </a>
-    <a href="https://github.com/1Tai7/DEV012-dataverse" style="padding-left: 3px;"> & Ilce</a>
+    <a href="https://github.com/vaneval27">By Vane</a>
+    <a href="https://github.com/1Tai7/DEV012-dataverse">& Ilce</a>
   </footer>
   <script src="main.js" type="module"></script>
   <script src="https://kit.fontawesome.com/74b5fc9c6f.js" crossorigin="anonymous"></script>
