--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <section class="containerModal">
       <div class="filterSpecies">
         <label for="filterSpecies">Filtrar por especie: </label>
-        <select name="species" data-testid="select-filter">
+        <select id="filterSpecies" name="speciesCharacter" data-testid="select-filter">
           <option value="" disabled selected>-- selecciona --</option>
           <option value="Desconocido">desconocido</option>
           <option value="Droide">droide</option>
@@ -41,7 +41,7 @@
       </div>
       <div class="filterAffiliation">
         <label for="filteraffiliation">Filtrar por afiliación: </label>
-        <select name="affiliation" data-testid="select-filter">
+        <select id="filteraffiliation" name="affiliationCharacter" data-testid="select-filter">
           <option value="" disabled selected>-- selecciona --</option>
           <option value="Alianza Rebelde">Alianza Rebelde</option>
           <option value="Cazarrecompensas">Cazarrecompensas</option>
@@ -54,7 +54,7 @@
       </div>
       <div class="sortBy">
         <label for="sortBy">Ordenar por: </label>
-        <select name="sortBy" data-testid="select-sort">
+        <select id="sortBy" name="sortBy" data-testid="select-sort">
           <option value="" disabled selected>-- selecciona --</option>
           <option value="asc">A - Z</option>
           <option value="desc">Z - A</option>
@@ -73,13 +73,13 @@
   </section>
 
   <section id="root" class="cardsBox">
-  
+
   </section>
   <footer><i class="fa-brands fa-github" style="color: #d7d700"></i>
     <a href="https://github.com/vaneval27">By Vane</a>
     <a href="https://github.com/1Tai7/DEV012-dataverse">& Ilce</a>
   </footer>
-  <script src="main.js" type="module"></script>
+  <script src="main.js" type="module" defer></script>
   <script src="https://kit.fontawesome.com/74b5fc9c6f.js" crossorigin="anonymous"></script>
 
 </body>
