add estilos en la barra de estadisticas

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
     <h2>Bienvenido a la Galaxia de STAR WARS</h2>
     <h4>Explora los detalles de tus personajes favoritos de la Saga</h4>
   </main>
-
-  <p id="stats"></p>
-  <p id="sumAges"></p>
-
+  <div class="statistics">
+    <p id="stats"></p>
+    <p id="sumAges"></p>
+  </div>
   <section class="containerFilter">
     <section class="containerModal">
       <div class="filterSpecies">
